Updating code to remove vmug components

--- a/checkin.html
+++ b/checkin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>VMUG Checkin</title>
+	<title>Checkin</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
 	</div>
 	<div id="content">
 		<div class="card text-center" id="credsForm">
-                <h3 class="card-header" id="formHeader"> VMUG Check-in </h3>
+                <h3 class="card-header" id="formHeader"> Check-in </h3>
                 <div class="card-block" id="fields">
                     <form autocomplete="off" id="checkinForm" method="post">
                         <input type="text" name="name" placeholder="Name"/><br/>
