--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>VMUG Checkin</title>
+	<title>Checkin</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
 	</div>
 	<div id="content">
 		<div class="card text-center" id="credsForm">
-            <h3 class="card-header" id="formHeader"> VMUG Walk-on Registration </h3>
+            <h3 class="card-header" id="formHeader"> Walk-on Registration </h3>
             <div class="card-block" id="fields">
                 <form autocomplete="off" id="registerForm" method="post">
                     <input type="text" name="firstName" placeholder="First Name"/><br/>
