--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a href="registration.html">
 				<div id="register" class="indexButtons">
 					<div id="textWrapper">
-						<p>Not registered yet?</p>
+						<p>Not registered yet?!?!</p>
 						<hr>
 						<h1>Click here for</h1>
 						<h1>walk-on registration!</h1>
